feat: add some swagger api docs
