# swagger/swagger.yml
@@ -179,6 +179,32 @@ paths:
       responses:
         "200":
           description: '{int} int topics count'
+  /get-front-conf-by-field:
+    get:
+      tags:
+      - github.com/casbin/casnode/controllersApiController
+      description: Get front confs by field
+      operationId: ApiController.GetFrontConfsByField
+      responses:
+        "200":
+          description: The Response object
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/object.FrontConf'
+  /get-front-confs:
+    get:
+      tags:
+      - github.com/casbin/casnode/controllersApiController
+      description: Get all front confs
+      operationId: ApiController.GetFrontConfs
+      responses:
+        "200":
+          description: The Response object
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/array'
   /get-hot-topic:
     get:
       tags:
@@ -677,11 +703,14 @@ definitions:
   _controllers.Response:
     title: Response
     type: object
-  847.0xc00069b140.false:
+  1278.0xc000185860.false:
     title: "false"
     type: object
-  882.0xc00069b170.false:
+  1312.0xc000185890.false:
     title: "false"
+    type: object
+  array:
+    title: array
     type: object
   controller.Response:
     title: Response
@@ -707,9 +736,9 @@ definitions:
     type: object
     properties:
       data:
-        $ref: '#/definitions/847.0xc00069b140.false'
+        $ref: '#/definitions/1278.0xc000185860.false'
       data2:
-        $ref: '#/definitions/882.0xc00069b170.false'
+        $ref: '#/definitions/1312.0xc000185890.false'
       msg:
         type: string
       status:
@@ -719,9 +748,9 @@ definitions:
     type: object
     properties:
       data:
-        $ref: '#/definitions/847.0xc00069b140.false'
+        $ref: '#/definitions/1278.0xc000185860.false'
       data2:
-        $ref: '#/definitions/882.0xc00069b170.false'
+        $ref: '#/definitions/1312.0xc000185890.false'
       msg:
         type: string
       status:
@@ -872,6 +901,18 @@ definitions:
       upCount:
         type: integer
         format: int64
+      urlPath:
+        type: string
+  object.FrontConf:
+    title: FrontConf
+    type: object
+    properties:
+      Field:
+        type: string
+      Id:
+        type: string
+      Value:
+        type: string
   object.Member:
     title: Member
     type: object
@@ -1002,6 +1043,8 @@ definitions:
       upCount:
         type: integer
         format: int64
+      urlPath:
+        type: string
   object.Poster:
     title: Poster
     type: object
@@ -1066,6 +1109,8 @@ definitions:
       upCount:
         type: integer
         format: int64
+      urlPath:
+        type: string
   object.TopicWithAvatar:
     title: TopicWithAvatar
     type: object
@@ -1124,3 +1169,5 @@ definitions:
       upCount:
         type: integer
         format: int64
+      urlPath:
+        type: string
